<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="7"
    tools:context="com.edsgerlin.calculator.MainActivity">


    <TextView
        android:id="@+id/text_display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="end|center"
        android:text="0"
        android:textSize="48sp" />

    <android.support.v7.widget.GridLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@android:color/transparent"
        app:columnCount="4"
        app:rowCount="4">

        <Button
            android:id="@+id/button_number_7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/number_7"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_number_8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/number_8"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_number_9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/number_9"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_division_sign"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/division_sign"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_number_4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/number_4"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_number_5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/number_5"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_number_6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/number_6"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_multiplication_sign"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/multiplication_sign"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_number_1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/number_1"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_number_2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/number_2"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_number_3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/number_3"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_minus_sign"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/minus_sign"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_decimal_mark"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/decimal_mark"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_number_0"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/number_0"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_equals_sign"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/equals_sign"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button_plus_sign"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="onButtonClick"
            android:text="@string/plus_sign"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"
            android:textSize="48sp" />
    </android.support.v7.widget.GridLayout>
</LinearLayout>
